--- a/splunk_eventgen/default/eventgen.conf
+++ b/splunk_eventgen/default/eventgen.conf
@@ -49,3 +49,4 @@ autotimestamps = [["\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2}", "%Y-%m-%d %H:%M:
 autotimestamp = false
 httpeventWaitResponse = true
 disableLoggingQueue = true
+splitSample = 0
