--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            set -e
             make test
           no_output_timeout: 30m
       - store_test_results:
