--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,4 +1,4 @@
-FROM rabbitmq:3.7.15-management-alpine
+FROM redis:5.0.5-alpine
 
 RUN apk --no-cache upgrade && \
 	apk add --no-cache --update \
@@ -10,17 +10,31 @@ RUN apk --no-cache upgrade && \
 	openssl-dev \
 	libxml2-dev \
 	libxslt-dev \
+	bash \
+	sudo \
+	openssh \
+	tar \
+	acl \
+	g++ \
+	git \
 	curl && \
 	pip install --upgrade pip && \
 	rm -rf /tmp/* && \
-	rm -rf /var/cache/apk/*
+	rm -rf /var/cache/apk/* && \
+	ssh-keygen -f /etc/ssh/ssh_host_rsa_key -N '' -t rsa && \
+	mkdir -p /var/run/sshd && \
+	mkdir -p /root/.ssh && \
+	chmod 0700 /root/.ssh && \
+	passwd -u root && \
+	pip install git+git://github.com/esnme/ultrajson.git
 
+COPY dockerfiles/sshd_config /etc/ssh/sshd_config
 COPY dockerfiles/entrypoint.sh /sbin/entrypoint.sh
 COPY dist/* /root/splunk_eventgen.tgz
 RUN pip install /root/splunk_eventgen.tgz && \
-	rm /root/splunk_eventgen.tgz && \
-	echo "[{rabbit, [{loopback_users, []}]}]." >> /etc/rabbitmq/rabbitmq.config
+	rm /root/splunk_eventgen.tgz
 
-EXPOSE 5672 15672 9500
-WORKDIR  /usr/lib/python2.7/site-packages/splunk_eventgen
+EXPOSE 2222 6379 9500
+RUN chmod a+x /sbin/entrypoint.sh
+WORKDIR /usr/lib/python2.7/site-packages/splunk_eventgen
 ENTRYPOINT ["/sbin/entrypoint.sh"]
