--- a/tests/sample_eventgen_conf/scsout/eventgen.conf
+++ b/tests/sample_eventgen_conf/scsout/eventgen.conf
@@ -3,13 +3,13 @@ sampleDir = .
 interval = 1
 mode = replay
 end = 1
-outputMode = scpout
-host = eventgen_scp_plugin
-source = scp_plugin_test
-sourcetype = scp_plugin_test_type
+outputMode = scsout
+host = eventgen_scs_plugin
+source = scs_plugin_test
+sourcetype = scs_plugin_test_type
 
-scpEndPoint = <URL>
-scpAccessToken = <TOKEN>
+scsEndPoint = <URL>
+scsAccessToken = <TOKEN>
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = replaytimestamp
