small csv fix, add test case

--- a/tests/large/conf/eventgen_tutorial1.conf
+++ b/tests/large/conf/eventgen_tutorial1.conf
@@ -3,7 +3,7 @@ sampleDir = ../sample
 mode = replay
 sampletype = csv
 timeMultiple = 2
-outputMode = file
+outputMode = stdout
 fileName = tests/large/results/eventgen_tutorial1.result
 end = 1
 
