Upgraded test instance

--- a/tests/large/provision/Dockerfile
+++ b/tests/large/provision/Dockerfile
@@ -1,11 +1,8 @@
-FROM splunk/splunk:7.0.3-monitor
+FROM splunk/splunk:7.3-debian
 
-# https://superuser.com/questions/1423486/issue-with-fetching-http-deb-debian-org-debian-dists-jessie-updates-inrelease
-RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
-
-RUN apt-get update
+RUN sudo apt-get update
 
 RUN echo "installing docker dependencies and development tools" && \
-    apt-get --assume-yes install curl vim
+    sudo apt-get --assume-yes install curl vim
 
 COPY provision.sh /opt/splunk/
