--- a/tests/large/provision/docker-compose.yml
+++ b/tests/large/provision/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 services:
   splunk:
     hostname: eventgensplunk
-    build: .
+    image: provision_splunk:latest
     ports:
       - 8000:8000
       - 8089:8089
@@ -12,8 +12,10 @@ services:
       SPLUNK_START_ARGS: --answer-yes --no-prompt --accept-license
       # add `SHELL` env variable to make the `dircolors` happy
       SHELL: /bin/bash
+      SPLUNK_PASSWORD: changeme
     volumes:
       # the `docker` command in guest can talk to host docker daemon
       - "/var/run/docker.sock:/var/run/docker.sock"
     # to make terminal colorful
     tty: true
+      
