add httpevent collector

--- a/tests/large/provision/Dockerfile
+++ b/tests/large/provision/Dockerfile
@@ -5,4 +5,4 @@ RUN sudo apt-get update
 RUN echo "installing docker dependencies and development tools" && \
     sudo apt-get --assume-yes install curl vim
 
-COPY provision.sh /opt/splunk/
+COPY ["provision.sh", "add_httpevent_collector.sh", "/opt/splunk/"]
