--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ jinja2==2.10.3
 urllib3==1.24.2
 pyOpenSSL
 flake8>=3.7.7
-yapf>=0.26.0
+black==19.10b0
 isort>=4.3.15
 Flask>=1.0.3
 redis==3.3.10
