test circleci fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Enable Py3
+            command: |
+              pyenv versions
+              pyenv global 3.7.0
+      - run:
           name: Run Tests
           command: |
             set -e
