--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,12 @@ jobs:
       - run:
           name: Enable Py3
           command: |
-            pyenv versions
-            pyenv global 3.7.0
+            pyenv uninstall  -f 3.5.2
+            sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev \
+              libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev \
+              xz-utils tk-dev libffi-dev liblzma-dev python-openssl git
+            pyenv install 3.7.7
+            pyenv global 3.7.7
       - run:
           name: Run Tests
           command: |
