--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
       - run:
           name: Enable Py3
           command: |
-            pyenv install 3.7.7
-            pyenv global 3.7.7
+            pyenv install --list
       - run:
           name: Run Tests
           command: |
