--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            pip3 install --upgrade pip
+            pip3 install poetry
             set -e
             make test
           no_output_timeout: 30m
@@ -31,4 +33,3 @@ workflows:
   run_tests:
     jobs:
       - test_eventgen
-
