--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,15 +20,19 @@ classifiers=[
     "Topic :: Software Development :: Build Tools",
     "Topic :: Software Development :: Testing",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
 ]
 packages = [{ include = "splunk_eventgen"}]
 
 [tool.poetry.scripts]
 splunk_eventgen = "splunk_eventgen.__main__:main"
 
+[build-system]
+requires = ["poetry>=1.0.5"]
+build-backend = "poetry.masonry.api"
+
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 docker = "^3.7.3"
 pyOpenSSL = "^19.1.0"
 lxml = "^4.3.5"
