--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,16 @@ jobs:
           command: |
             pyenv global 3.7.0
       - run:
+          name: Run Flake8 Code Lint
+          command: |
+            set -e
+            pip install "flake8>=3.7.7"
+            make lint-all
+      - run:
           name: Check Code Format
           command: |
             set -e
-            pip install -r requirements.txt
+            pip install "black==19.10b0" "isort>=4.3.15"
             make format-check
       - run:
           name: Run Tests
