--- a/tests/large/conf/eventgen_output_modinput.conf
+++ b/tests/large/conf/eventgen_output_modinput.conf
@@ -5,6 +5,7 @@ earliest = -15s
 sampletype = raw
 outputMode = modinput
 end = 1
+source = eventgen
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = timestamp
