--- a/splunk_eventgen/default/eventgen.conf
+++ b/splunk_eventgen/default/eventgen.conf
@@ -12,7 +12,7 @@
 [global]
 disabled = false
 debug = false
-verbosity = false
+verbosity = error
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
