--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -30,7 +30,7 @@ RUN apk --no-cache upgrade && \
 	passwd -u root && \
 	# install dependencies of conductor2 used by perf
 	pip2 install filelock twisted requests queuelib psutil crochet msgpack-python unidecode attrdict service_identity && \
-	pip2 install git+https://github.com/esnme/ultrajson.git@v1.35
+	pip2 install git+https://github.com/esnme/ultrajson.git
 
 COPY dockerfiles/sshd_config /etc/ssh/sshd_config
 COPY dockerfiles/entrypoint.sh /sbin/entrypoint.sh
