Fixing interval / replay bugs.  Updated some replay tests to match new logic.

--- a/tests/large/conf/eventgen_replay_backfill_greater_interval.conf
+++ b/tests/large/conf/eventgen_replay_backfill_greater_interval.conf
@@ -5,6 +5,7 @@ sampletype = raw
 outputMode = file
 fileName = tests/large/results/eventgen_replay_backfill.result
 mode = replay
+interval = 0
 end = 2
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
