--- a/tests/large/conf/eventgen_replay_csv.conf
+++ b/tests/large/conf/eventgen_replay_csv.conf
@@ -4,6 +4,7 @@ mode = replay
 sampletype = csv
 timeField = _time
 outputMode = stdout
+interval = 0
 
 token.0.token = \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}
 token.0.replacementType = replaytimestamp
