--- a/tests/large/conf/eventgen_replay_csv_with_tz.conf
+++ b/tests/large/conf/eventgen_replay_csv_with_tz.conf
@@ -5,6 +5,7 @@ sampletype = csv
 outputMode = stdout
 timezone = -0100
 timeField = _raw
+interval = 0
 
 token.0.token = \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2},\d{3,6}
 token.0.replacementType = timestamp
