--- a/tests/large/conf/eventgen_replay_end_1.conf
+++ b/tests/large/conf/eventgen_replay_end_1.conf
@@ -4,6 +4,7 @@ mode = replay
 earliest = -5s
 sampletype = raw
 outputMode = stdout
+interval = 0
 end = 2
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
