--- a/tests/large/conf/eventgen_replay_end_2.conf
+++ b/tests/large/conf/eventgen_replay_end_2.conf
@@ -5,6 +5,7 @@ earliest = -5s
 sampletype = raw
 outputMode = stdout
 end = -1
+inteval=0
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = replaytimestamp
