--- a/tests/large/conf/eventgen_replay_backfill.conf
+++ b/tests/large/conf/eventgen_replay_backfill.conf
@@ -4,6 +4,7 @@ backfill = -5s
 sampletype = raw
 outputMode = stdout
 mode = replay
+interval = 0
 end = 2
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
