--- a/tests/large/conf/eventgen_replay_timeMultiple.conf
+++ b/tests/large/conf/eventgen_replay_timeMultiple.conf
@@ -4,6 +4,7 @@ mode = replay
 sampletype = raw
 outputMode = stdout
 timeMultiple = 0.5
+interval=0
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = replaytimestamp
