Fixing logging, speeding up tutorial1

--- a/tests/large/conf/eventgen_tutorial1.conf
+++ b/tests/large/conf/eventgen_tutorial1.conf
@@ -2,7 +2,7 @@
 sampleDir = ../sample
 mode = replay
 sampletype = csv
-timeMultiple = 2
+timeMultiple = .1
 outputMode = file
 fileName = tests/large/results/eventgen_tutorial1.result
 end = 1
