--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           name: Check Code Format
           command: |
             set -e
-            pip install "black==19.10b0" "isort>=4.3.15"
+            pip install "black>=20.8b1" "isort>=5.4.2"
             make format-check
       - run:
           name: Run Tests
