--- a/splunk_eventgen/default/eventgen.conf
+++ b/splunk_eventgen/default/eventgen.conf
@@ -4,15 +4,14 @@
 # into ../local and edit there.
 #
 
-## IMPORTANT! Do not specify any settings under a default stanza
+## IMPORTANT! Do not specify any settings under a [default] stanza
 ## The layering system will not behave appropriately
 ## Use [global] instead
-[default]
 
 [global]
 disabled = false
 debug = false
-verbosity = false
+verbosity = 40
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
