Allowing EG to be installed without a restart

--- a/splunk_eventgen/splunk_app/default/app.conf
+++ b/splunk_eventgen/splunk_app/default/app.conf
@@ -23,3 +23,7 @@ id = SA-Eventgen
 [ui]
 is_visible = true
 label = SA-Eventgen
+
+[triggers]
+reload.eventgen = simple
+reload.inputs.eventgen = access_endpoints /data/inputs/eventgen
